--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "form-data": "^4.0.0",
+    "fslightbox-react": "^1.6.2-2",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
+    "react-toastify": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "8.16.0",
